--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "build": "vite build",
-    "vercel-build": "vite build",
-    "start": "tsx server/index.ts",
+    "dev": "tsx server/vite.ts",
+    "build": "tsc && vite build",
+    "vercel-build": "tsc && vite build",
+    "start": "tsx server/vite.ts",
     "check": "tsc"
   },
   "dependencies": {
